--- a/templates/introduction/index.erb
+++ b/templates/introduction/index.erb
@@ -26,8 +26,9 @@
 
 <pre><strong><%= I18n.t("introduction.index.getting_started.form.application_type_lbl") %></strong> <%= I18n.t("introduction.index.getting_started.form.application_type_val") %>
 
-<strong><%= I18n.t("introduction.index.getting_started.form.application_name_lbl") %></strong> <%= I18n.t("introduction.index.getting_started.form.application_name_val") %>
+            <strong><%= I18n.t("introduction.index.getting_started.form.application_name_lbl") %></strong> <%= I18n.t("introduction.index.getting_started.form.application_name_val") %>
      <strong><%= I18n.t("introduction.index.getting_started.form.description_lbl") %></strong> <%= I18n.t("introduction.index.getting_started.form.description_val") %>
+          <strong><%= I18n.t("introduction.index.getting_started.form.format_lbl") %></strong> <%= I18n.t("introduction.index.getting_started.form.format_val") %>
            <strong><%= I18n.t("introduction.index.getting_started.form.label_lbl") %></strong> <%= I18n.t("introduction.index.getting_started.form.label_val") %>
       <strong><%= I18n.t("introduction.index.getting_started.form.endpoint_lbl") %></strong> <%= I18n.t("introduction.index.getting_started.form.endpoint_val") %>
 </pre>
@@ -44,8 +45,16 @@
 
 <p><%= I18n.t("introduction.index.getting_started.paragraph_9") %></p>
 
-<ul class="pager">
-  <li class="next">
-    <%= link_to(I18n.t("menu.understanding_the_service.framework") + " &rarr;", "introduction/framework") %>
-  </li>
-</ul>
+<br><br>
+
+<div class="row">
+  <div class="span3">
+    <a href="framework/verifone-evo"><img src="/img/terminal-brands/verifone-logo.png" width="154px" height="66px" alt="Verifone" /></a>
+  </div>
+  <div class="span3">
+    <a href="framework/ingenico-telium-2"><img src="/img/terminal-brands/ingenico-logo.png" width="154px" height="66px" alt="Ingenico" /></a>
+  </div>
+  <div class="span3">
+    <a href="framework/pax-d200"><img src="/img/terminal-brands/pax-logo.png" width="154px" height="66px" alt="PAX" /></a>
+  </div>
+</div>
