--- a/templates/introduction/framework.erb
+++ b/templates/introduction/framework.erb
@@ -23,7 +23,7 @@
 <table cellpadding="0" cellspacing="0" border="0" class="table table-bordered table-hover table-pos-terminals">
 	<thead>
     <tr>
-      <th><span class="fa fa-code" title="<%= I18n.t("posxml_supported") %>"></span><span class="fa fa-diamond" title="<%= I18n.t("ruby_supported") %>"></span>PAX</th>
+      <th><span class="fa fa-code" title="<%= I18n.t("posxml_supported") %>"></span><span class="fa fa-diamond" title="<%= I18n.t("ruby_supported") %>"></span>PAX Prolin</th>
       <th><span class="fa fa-code" title="<%= I18n.t("posxml_supported") %>"></span>Verifone Evo</th>
       <th><span class="fa fa-code" title="<%= I18n.t("posxml_supported") %>"></span>Ingenico Telium 2</th>
     </tr>
@@ -35,7 +35,7 @@
 			<td>ICT220</td>
 		</tr>
 		<tr>
-      <td></td>
+      <td>S920 (WiFi)</td>
 			<td>VX 675</td>
 			<td>ICT250</td>
 		</tr>
@@ -51,8 +51,8 @@
 		</tr>
 		<tr>
       <td></td>
-			<td>VX 690</td>
-			<td>IWL280</td>
+			<td>VX 690 (WiFi)</td>
+			<td>IWL280 (WiFi)</td>
 		</tr>
     <tr>
       <td></td>
