Add metacontents page on menu

--- a/templates/menu.erb
+++ b/templates/menu.erb
@@ -130,6 +130,7 @@
           <li class="<%=is_group_item_active?("api", "logical-numbers") %>"><%= link_to(I18n.t("menu.api.v1.logical_numbers"), "api/v1/logical-numbers") %></li>
           <li class="<%=is_group_item_active?("api", "groups") %>"><%= link_to(I18n.t("menu.api.v1.groups"), "api/v1/groups") %></li>
           <li class="<%=is_group_item_active?("api", "parameters") %>"><%= link_to(I18n.t("menu.api.v1.parameters"), "api/v1/parameters") %></li>
+          <li class="<%=is_group_item_active?("api", "metacontents") %>"><%= link_to(I18n.t("menu.api.v1.metacontents"), "api/v1/metacontents") %></li>
           <li class="<%=is_group_item_active?("api", "assets") %>"><%= link_to(I18n.t("menu.api.v1.assets"), "api/v1/assets") %></li>
           <li class="<%=is_group_item_active?("api", "push-notifications") %>"><%= link_to(I18n.t("menu.api.v1.push_notifications"), "api/v1/push-notifications") %></li>
           <li class="<%=is_group_item_active?("api", "users") %>"><%= link_to(I18n.t("menu.api.v1.users"), "api/v1/users") %></li>
