Update logical-number parameter descriptions

--- a/templates/api/v1/logical_numbers.erb
+++ b/templates/api/v1/logical_numbers.erb
@@ -42,9 +42,9 @@
       <td><%= I18n.t("api.v1.logical_numbers.attributes.list.group_id") %></td>
     </tr>
     <tr>
-      <td>app_ids</td>
+      <td>app_version_ids</td>
       <td>Integer (array)</td>
-      <td><%= I18n.t("api.v1.logical_numbers.attributes.list.app_ids") %></td>
+      <td><%= I18n.t("api.v1.logical_numbers.attributes.list.app_version_ids") %></td>
     </tr>
     <tr>
       <td>updated_at</td>
@@ -123,7 +123,7 @@ puts "Response #{res.code} #{res.message}: #{res.body}"
             "id":1,
             "number":"112233",
             "group_id":null,
-            "app_ids":[],
+            "app_version_ids":[],
             "updated_at":"2015-03-02T18:59:14Z",
             "created_at":"2015-03-02T18:59:14Z",
             "created_by":1,
@@ -135,7 +135,7 @@ puts "Response #{res.code} #{res.message}: #{res.body}"
             "id":2,
             "number":"445566",
             "group_id":null,
-            "app_ids":[],
+            "app_version_ids":[],
             "updated_at":"2015-03-02T18:59:29Z",
             "created_at":"2015-03-02T18:59:29Z",
             "created_by":1,
@@ -192,7 +192,7 @@ puts "Response #{res.code} #{res.message}: #{res.body}"
     "id":2,
     "number":"445566",
     "group_id":null,
-    "app_ids":[],
+    "app_version_ids":[],
     "updated_at":"2015-03-02T18:59:29Z",
     "created_at":"2015-03-02T18:59:29Z",
     "created_by":1,
@@ -253,7 +253,6 @@ puts "Response #{res.code} #{res.message}: #{res.body}"
     "id":3,
     "number":"778899",
     "group_id":null,
-    "app_ids":[],
     "updated_at":"2015-03-02T19:17:19Z",
     "created_at":"2015-03-02T19:17:19Z",
     "created_by":1,
@@ -314,7 +313,7 @@ puts "Response #{res.code} #{res.message}: #{res.body}"
     "id":3,
     "number":"889900",
     "group_id":null,
-    "app_ids":[],
+    "app_version_ids":[],
     "updated_at":"2015-03-02T19:20:27Z",
     "created_at":"2015-03-02T19:17:19Z",
     "created_by":1,
