Add dynamic menu POSXML function

--- a/templates/posxml/useful_functions.erb
+++ b/templates/posxml/useful_functions.erb
@@ -5,6 +5,7 @@
 <h1><%= I18n.t("posxml.useful_functions.title") %></h1>
 
 <ol class="table-of-contents">
+  <li><a href="#dynamic-menu"><%= I18n.t("posxml.useful_functions.table_of_contents.dynamic_menu") %></a></li>
   <li><a href="#cnpj-validation"><%= I18n.t("posxml.useful_functions.table_of_contents.cnpj_validation") %></a></li>
   <li><a href="#cpf-validation"><%= I18n.t("posxml.useful_functions.table_of_contents.cpf_validation") %></a></li>
   <li><a href="#hide-credit-card-number"><%= I18n.t("posxml.useful_functions.table_of_contents.hide_credit_card_number") %></a></li>
@@ -15,6 +16,14 @@
 <p><%= I18n.t('posxml.useful_functions.introduction') %></p>
 
 <p class="note"><%= I18n.t('posxml.useful_functions.paragraph_1') %></p>
+
+<h2 id="dynamic-menu"><%= I18n.t("posxml.useful_functions.table_of_contents.dynamic_menu") %></h2>
+
+<p><%= I18n.t("posxml.useful_functions.dynamic_menu.paragraph_1") %></p>
+
+<p><%= I18n.t("author") %>: <a href="https://github.com/gustavofernandesn">Gustavo Fernandes</a></p>
+
+<script src="https://gist.github.com/posxml/ecfab8ee407ff2d7e39afbe514b3d86a.js"></script>
 
 <h2 id="cnpj-validation"><%= I18n.t("posxml.useful_functions.table_of_contents.cnpj_validation") %></h2>
 
