Add receiver last_transfer attribute

--- a/templates/api/v1/receivers.erb
+++ b/templates/api/v1/receivers.erb
@@ -71,6 +71,11 @@
       <td><%= I18n.t("api.v1.receivers.attributes.list.account_number_check") %></td>
     </tr>
     <tr>
+      <td>last_transfer</td>
+      <td>String</td>
+      <td><%= I18n.t("api.v1.receivers.attributes.list.last_transfer") %></td>
+    </tr>
+    <tr>
       <td>updated_at</td>
       <td>String</td>
       <td><%= I18n.t("api.v1.receivers.attributes.list.updated_at") %></td>
