--- a/templates/api/v1/wallets.erb
+++ b/templates/api/v1/wallets.erb
@@ -1,20 +1,20 @@
 <% content_for :docs_description do %>
-  <meta name="docs:description" content="<%= I18n.t('api.v1.receivers.description') %>">
+  <meta name="docs:description" content="<%= I18n.t('api.v1.wallets.description') %>">
 <% end %>
 
-<h1><%= I18n.t("api.v1.receivers.title") %></h1>
+<h1><%= I18n.t("api.v1.wallets.title") %></h1>
 
 <ol class="table-of-contents">
-  <li><a href="#attributes"><%= I18n.t("api.v1.receivers.table_of_contents.attributes") %></a></li>
-  <li><a href="#index"><%= I18n.t("api.v1.receivers.table_of_contents.index") %></a></li>
-  <li><a href="#show"><%= I18n.t("api.v1.receivers.table_of_contents.show") %></a></li>
-  <li><a href="#create"><%= I18n.t("api.v1.receivers.table_of_contents.create") %></a></li>
-  <li><a href="#update"><%= I18n.t("api.v1.receivers.table_of_contents.update") %></a></li>
+  <li><a href="#attributes"><%= I18n.t("api.v1.wallets.table_of_contents.attributes") %></a></li>
+  <li><a href="#index"><%= I18n.t("api.v1.wallets.table_of_contents.index") %></a></li>
+  <li><a href="#show"><%= I18n.t("api.v1.wallets.table_of_contents.show") %></a></li>
+  <li><a href="#create"><%= I18n.t("api.v1.wallets.table_of_contents.create") %></a></li>
+  <li><a href="#update"><%= I18n.t("api.v1.wallets.table_of_contents.update") %></a></li>
 </ol>
 
-<h2 id="attributes"><%= I18n.t("api.v1.receivers.table_of_contents.attributes") %></h2>
+<h2 id="attributes"><%= I18n.t("api.v1.wallets.table_of_contents.attributes") %></h2>
 
-<p><%= I18n.t("api.v1.receivers.attributes.paragraph_1") %></p>
+<p><%= I18n.t("api.v1.wallets.attributes.paragraph_1") %></p>
 
 <table class="table table-striped table-bordered table-condensed">
   <thead>
@@ -28,83 +28,83 @@
     <tr>
       <td>id</td>
       <td>Integer</td>
-      <td><%= I18n.t("api.v1.receivers.attributes.list.id") %></td>
+      <td><%= I18n.t("api.v1.wallets.attributes.list.id") %></td>
     </tr>
     <tr>
       <td>account_id</td>
       <td>String</td>
-      <td><%= I18n.t("api.v1.receivers.attributes.list.account_id") %></td>
+      <td><%= I18n.t("api.v1.wallets.attributes.list.account_id") %></td>
     </tr>
     <tr>
       <td>name</td>
       <td>String</td>
-      <td><%= I18n.t("api.v1.receivers.attributes.list.name") %></td>
+      <td><%= I18n.t("api.v1.wallets.attributes.list.name") %></td>
     </tr>
     <tr>
       <td>document_type</td>
       <td>String</td>
-      <td><%= I18n.t("api.v1.receivers.attributes.list.document_type") %></td>
+      <td><%= I18n.t("api.v1.wallets.attributes.list.document_type") %></td>
     </tr>
     <tr>
       <td>document_number</td>
       <td>String</td>
-      <td><%= I18n.t("api.v1.receivers.attributes.list.document_number") %></td>
+      <td><%= I18n.t("api.v1.wallets.attributes.list.document_number") %></td>
     </tr>
     <tr>
       <td>bank_code</td>
       <td>String</td>
-      <td><%= I18n.t("api.v1.receivers.attributes.list.bank_code") %></td>
+      <td><%= I18n.t("api.v1.wallets.attributes.list.bank_code") %></td>
     </tr>
     <tr>
       <td>agency</td>
       <td>String</td>
-      <td><%= I18n.t("api.v1.receivers.attributes.list.agency") %></td>
+      <td><%= I18n.t("api.v1.wallets.attributes.list.agency") %></td>
     </tr>
     <tr>
       <td>account_number</td>
       <td>String</td>
-      <td><%= I18n.t("api.v1.receivers.attributes.list.account_number") %></td>
+      <td><%= I18n.t("api.v1.wallets.attributes.list.account_number") %></td>
     </tr>
     <tr>
       <td>account_number_check</td>
       <td>String</td>
-      <td><%= I18n.t("api.v1.receivers.attributes.list.account_number_check") %></td>
+      <td><%= I18n.t("api.v1.wallets.attributes.list.account_number_check") %></td>
     </tr>
     <tr>
       <td>last_transfer</td>
       <td>String</td>
-      <td><%= I18n.t("api.v1.receivers.attributes.list.last_transfer") %></td>
+      <td><%= I18n.t("api.v1.wallets.attributes.list.last_transfer") %></td>
     </tr>
     <tr>
       <td>updated_at</td>
       <td>String</td>
-      <td><%= I18n.t("api.v1.receivers.attributes.list.updated_at") %></td>
+      <td><%= I18n.t("api.v1.wallets.attributes.list.updated_at") %></td>
     </tr>
     <tr>
       <td>created_at</td>
       <td>String</td>
-      <td><%= I18n.t("api.v1.receivers.attributes.list.created_at") %></td>
+      <td><%= I18n.t("api.v1.wallets.attributes.list.created_at") %></td>
     </tr>
     <tr>
       <td>created_by</td>
       <td>Integer</td>
-      <td><%= I18n.t("api.v1.receivers.attributes.list.created_by") %></td>
+      <td><%= I18n.t("api.v1.wallets.attributes.list.created_by") %></td>
     </tr>
     <tr>
       <td>created_via</td>
       <td>String</td>
-      <td><%= I18n.t("api.v1.receivers.attributes.list.created_via") %></td>
+      <td><%= I18n.t("api.v1.wallets.attributes.list.created_via") %></td>
     </tr>
   </tbody>
 </table>
 
-<h2 id="index"><%= I18n.t("api.v1.receivers.table_of_contents.index") %></h2>
+<h2 id="index"><%= I18n.t("api.v1.wallets.table_of_contents.index") %></h2>
 
-<p><%= I18n.t("api.v1.receivers.index.paragraph_1") %></p>
+<p><%= I18n.t("api.v1.wallets.index.paragraph_1") %></p>
 
 <h3><%= I18n.t("api.method") %></h3>
 
-<pre><code>GET https://api.cloudwalk.io/<%= I18n.t("api.version") %>/receivers?access_token={token}</code></pre>
+<pre><code>GET https://api.cloudwalk.io/<%= I18n.t("api.version") %>/wallets?access_token={token}</code></pre>
 
 <h3><%= I18n.t("api.sample") %></h3>
 
@@ -115,7 +115,7 @@
 
 <div class="tab-content">
 <div class="tab-pane active" id="index-tab1">
-<pre><code>$ curl -X GET "https://api.cloudwalk.io/v1/receivers?access_token=$TOKEN"</code></pre>
+<pre><code>$ curl -X GET "https://api.cloudwalk.io/v1/wallets?access_token=$TOKEN"</code></pre>
 </div>
 
 <div class="tab-pane" id="index-tab2">
@@ -123,7 +123,7 @@
 
 token = 'API_TOKEN'
 
-uri = URI("https://api.cloudwalk.io/v1/receivers?access_token=#{token}")
+uri = URI("https://api.cloudwalk.io/v1/wallets?access_token=#{token}")
 
 http = Net::HTTP.new(uri.host, uri.port)
 http.use_ssl = true
@@ -146,9 +146,9 @@ puts "Response #{res.code} #{res.message}: #{res.body}"
       "entries":2,
       "total_entries":2
    },
-   "receivers":[
+   "wallets":[
       {
-         "receiver":{
+         "wallet":{
             "id":1,
             "account_id":"3202bfaf",
             "name":"John Doe",
@@ -166,7 +166,7 @@ puts "Response #{res.code} #{res.message}: #{res.body}"
          }
       },
       {
-         "receiver":{
+         "wallet":{
             "id":2,
             "account_id":"10366e63",
             "name":"Jane Roe",
@@ -187,13 +187,13 @@ puts "Response #{res.code} #{res.message}: #{res.body}"
 }
 </code></pre>
 
-<h2 id="show"><%= I18n.t("api.v1.receivers.table_of_contents.show") %></h2>
+<h2 id="show"><%= I18n.t("api.v1.wallets.table_of_contents.show") %></h2>
 
-<p><%= I18n.t("api.v1.receivers.show.paragraph_1") %></p>
+<p><%= I18n.t("api.v1.wallets.show.paragraph_1") %></p>
 
 <h3><%= I18n.t("api.method") %></h3>
 
-<pre><code>GET https://api.cloudwalk.io/<%= I18n.t("api.version") %>/receivers/{receiver_id}?access_token={token}</code></pre>
+<pre><code>GET https://api.cloudwalk.io/<%= I18n.t("api.version") %>/wallets/{wallet_id}?access_token={token}</code></pre>
 
 <h3><%= I18n.t("api.sample") %></h3>
 
@@ -204,7 +204,7 @@ puts "Response #{res.code} #{res.message}: #{res.body}"
 
 <div class="tab-content">
 <div class="tab-pane active" id="show-tab1">
-<pre><code>$ curl -X GET "https://api.cloudwalk.io/v1/receivers/1?access_token=$TOKEN"</code></pre>
+<pre><code>$ curl -X GET "https://api.cloudwalk.io/v1/wallets/1?access_token=$TOKEN"</code></pre>
 </div>
 
 <div class="tab-pane" id="show-tab2">
@@ -212,7 +212,7 @@ puts "Response #{res.code} #{res.message}: #{res.body}"
 
 token = 'API_TOKEN'
 
-uri = URI("https://api.cloudwalk.io/v1/receivers/1?access_token=#{token}")
+uri = URI("https://api.cloudwalk.io/v1/wallets/1?access_token=#{token}")
 
 http = Net::HTTP.new(uri.host, uri.port)
 http.use_ssl = true
@@ -229,7 +229,7 @@ puts "Response #{res.code} #{res.message}: #{res.body}"
 <h3><%= I18n.t("api.response") %></h3>
 
 <pre><code data-language="javascript">{
-   "receiver":{
+   "wallet":{
       "id":1,
       "account_id":"3202bfaf",
       "name":"John Doe",
@@ -248,13 +248,13 @@ puts "Response #{res.code} #{res.message}: #{res.body}"
 }
 </code></pre>
 
-<h2 id="create"><%= I18n.t("api.v1.receivers.table_of_contents.create") %></h2>
+<h2 id="create"><%= I18n.t("api.v1.wallets.table_of_contents.create") %></h2>
 
-<p><%= I18n.t("api.v1.receivers.create.paragraph_1") %></p>
+<p><%= I18n.t("api.v1.wallets.create.paragraph_1") %></p>
 
 <h3><%= I18n.t("api.method") %></h3>
 
-<pre><code>POST https://api.cloudwalk.io/<%= I18n.t("api.version") %>/receivers?access_token={token}</code></pre>
+<pre><code>POST https://api.cloudwalk.io/<%= I18n.t("api.version") %>/wallets?access_token={token}</code></pre>
 
 <h3><%= I18n.t("api.sample") %></h3>
 
@@ -265,7 +265,7 @@ puts "Response #{res.code} #{res.message}: #{res.body}"
 
 <div class="tab-content">
 <div class="tab-pane active" id="create-tab1">
-<pre><code>$ curl -X POST "https://api.cloudwalk.io/v1/receivers?access_token=$TOKEN" \
+<pre><code>$ curl -X POST "https://api.cloudwalk.io/v1/wallets?access_token=$TOKEN" \
 -d "name=John Roe" \
 -d "document_type=cpf" \
 -d "document_number=93136187881" \
@@ -292,7 +292,7 @@ payload = {
   "account_number_check" => "7"
 }
 
-uri = URI("https://api.cloudwalk.io/v1/receivers?access_token=#{token}")
+uri = URI("https://api.cloudwalk.io/v1/wallets?access_token=#{token}")
 
 http = Net::HTTP.new(uri.host, uri.port)
 http.use_ssl = true
@@ -310,7 +310,7 @@ puts "Response #{res.code} #{res.message}: #{res.body}"
 <h3><%= I18n.t("api.response") %></h3>
 
 <pre><code data-language="javascript">{
-   "receiver":{
+   "wallet":{
       "id":3,
       "account_id":"29af2aae",
       "name":"John Roe",
@@ -329,13 +329,13 @@ puts "Response #{res.code} #{res.message}: #{res.body}"
 }
 </code></pre>
 
-<h2 id="update"><%= I18n.t("api.v1.receivers.table_of_contents.update") %></h2>
+<h2 id="update"><%= I18n.t("api.v1.wallets.table_of_contents.update") %></h2>
 
-<p><%= I18n.t("api.v1.receivers.update.paragraph_1") %></p>
+<p><%= I18n.t("api.v1.wallets.update.paragraph_1") %></p>
 
 <h3><%= I18n.t("api.method") %></h3>
 
-<pre><code>PUT https://api.cloudwalk.io/<%= I18n.t("api.version") %>/receivers/{receiver_id}?access_token={token}</code></pre>
+<pre><code>PUT https://api.cloudwalk.io/<%= I18n.t("api.version") %>/wallets/{wallet_id}?access_token={token}</code></pre>
 
 <h3><%= I18n.t("api.sample") %></h3>
 
@@ -346,7 +346,7 @@ puts "Response #{res.code} #{res.message}: #{res.body}"
 
 <div class="tab-content">
 <div class="tab-pane active" id="update-tab1">
-<pre><code>$ curl -X PUT "https://api.cloudwalk.io/v1/receivers/1?access_token=$TOKEN" \
+<pre><code>$ curl -X PUT "https://api.cloudwalk.io/v1/wallets/1?access_token=$TOKEN" \
 -d "bank_code=002" \
 -d "agency=0321" \
 -d "account_number=765432" \
@@ -367,7 +367,7 @@ payload = {
   "account_number_check" => "1"
 }
 
-uri = URI("https://api.cloudwalk.io/v1/receivers/1?access_token=#{token}")
+uri = URI("https://api.cloudwalk.io/v1/wallets/1?access_token=#{token}")
 
 http = Net::HTTP.new(uri.host, uri.port)
 http.use_ssl = true
@@ -385,7 +385,7 @@ puts "Response #{res.code} #{res.message}: #{res.body}"
 <h3><%= I18n.t("api.response") %></h3>
 
 <pre><code data-language="javascript">{
-   "receiver":{
+   "wallet":{
       "id":1,
       "account_id":"29af2aae",
       "name":"John Roe",
