--- a/templates/introduction/framework.erb
+++ b/templates/introduction/framework.erb
@@ -24,7 +24,7 @@
 	<thead>
     <tr>
       <th><span class="fa fa-code" title="<%= I18n.t("posxml_supported") %>"></span><span class="fa fa-diamond" title="<%= I18n.t("ruby_supported") %>"></span>PAX Prolin</th>
-      <th><span class="fa fa-code" title="<%= I18n.t("posxml_supported") %>"></span><span class="fa fa-diamond" title="<%= I18n.t("ruby_supported") %>"></span>GERTEC</th>
+      <th><span class="fa fa-code" title="<%= I18n.t("posxml_supported") %>"></span><span class="fa fa-diamond" title="<%= I18n.t("ruby_supported") %>"></span>Gertec</th>
       <th><span class="fa fa-code" title="<%= I18n.t("posxml_supported") %>"></span>Verifone Evo</th>
       <th><span class="fa fa-code" title="<%= I18n.t("posxml_supported") %>"></span>Ingenico Telium 2</th>
     </tr>
@@ -33,43 +33,43 @@
 		<tr>
       <td>D200</td>
       <td>MP20</td>
-			<td>VX520</td>
+			<td>VX 520</td>
 			<td>ICT220</td>
 		</tr>
 		<tr>
       <td>S920</td>
       <td>GPOS400</td>
-			<td>VX675</td>
+			<td>VX 675</td>
 			<td>ICT250</td>
 		</tr>
 		<tr>
       <td></td>
       <td></td>
-			<td>VX680</td>
+			<td>VX 680</td>
 			<td>IWL220</td>
 		</tr>
 		<tr>
       <td></td>
       <td></td>
-			<td>VX685</td>
+			<td>VX 685</td>
 			<td>IWL250</td>
 		</tr>
 		<tr>
       <td></td>
       <td></td>
-			<td>VX690</td>
+			<td>VX 690</td>
 			<td>IWL280</td>
 		</tr>
     <tr>
       <td></td>
       <td></td>
-      <td>VX805</td>
+      <td>VX 805</td>
       <td></td>
     </tr>
     <tr>
       <td></td>
       <td></td>
-			<td>VX820</td>
+			<td>VX 820</td>
 			<td></td>
 		</tr>
     <tr>
