Add command xml.getelement

--- a/templates/posxml/commands.erb
+++ b/templates/posxml/commands.erb
@@ -249,6 +249,10 @@
 
   <div class="row-fluid">
     <div class="span4 command-short">
+      <a href="commands/xml.getelement">xml.getelement</a>
+      <p><%= I18n.t("posxml.commands.xml_getelement.description") %></p>
+    </div>
+
       <a href="commands/file.write">file.write</a>
       <p><%= I18n.t("posxml.commands.file_write.description") %></p>
     </div>
