--- a/templates/posxml/commands.erb
+++ b/templates/posxml/commands.erb
@@ -253,6 +253,14 @@
       <p><%= I18n.t("posxml.commands.xml_getelement.description") %></p>
     </div>
 
+    <div class="span4 command-short">
+      <a href="commands/json.getelement">json.getelement</a>
+      <p><%= I18n.t("posxml.commands.json_getelement.description") %></p>
+    </div>
+  </div>
+
+  <div class="row-fluid">
+    <div class="span4 command-short">
       <a href="commands/file.write">file.write</a>
       <p><%= I18n.t("posxml.commands.file_write.description") %></p>
     </div>
