Updated OS and EOS version of Verifone POS terminals

--- a/templates/framework/verifone_evo.erb
+++ b/templates/framework/verifone_evo.erb
@@ -46,22 +46,27 @@
     <tr>
       <td>VX 520</td>
       <td>QT520240</td>
-      <td>EOS011-01110410</td>
-    </tr>
-    <tr>
-      <td>VX 520 GPRS</td>
-      <td>QT5G0240</td>
-      <td>EOS011-01110410</td>
+      <td>2.8.7</td>
     </tr>
     <tr>
       <td>VX 680</td>
       <td>QT680240</td>
-      <td>EOS011-01110410</td>
+      <td>2.8.7</td>
     </tr>
     <tr>
-      <td>VX 675</td>
-      <td>QT650240</td>
-      <td>EOS011-01110410</td>
+      <td>VX 685</td>
+      <td>QT6Z0304</td>
+      <td>2.8.7</td>
+    </tr>
+    <tr>
+      <td>VX 690</td>
+      <td>QT690264</td>
+      <td>2.8.7</td>
+    </tr>
+    <tr>
+      <td>E265</td>
+      <td>QTE50320</td>
+      <td>2.8.7</td>
     </tr>
   </tbody>
 </table>
