Removed Vx805 and Vx820 link to install the framework

--- a/templates/framework/verifone_evo.erb
+++ b/templates/framework/verifone_evo.erb
@@ -16,12 +16,10 @@
 
 <p><%= I18n.t("framework.verifone_evo.introduction") %></p>
 
-<p class="note"><%= I18n.t("framework.verifone_evo.installing_vx805_and_vx820") %></p>
-
 <h2 id="pre-requisites"><%= I18n.t("framework.verifone_evo.table_of_contents.prerequisites") %></h2>
 
 <ol>
-  <li><%= I18n.t("framework.verifone_evo.prerequisites.operating_system") %></li>
+  <li><%= I18n.t("framework.verifone_evo.prerequisites.adapter") %></li>
   <li><%= I18n.t("framework.verifone_evo.prerequisites.pendrive") %></li>
   <li><%= I18n.t("framework.package.select") %></li>
 </ol>
