Improved Verifone trouble shooting description

--- a/templates/framework/verifone_evo.erb
+++ b/templates/framework/verifone_evo.erb
@@ -137,6 +137,15 @@ Remove USB Flash Mem
 <ol>
   <li><%= I18n.t("framework.verifone_evo.troubleshooting.one.paragraph_1") %></li>
   <li><%= I18n.t("framework.verifone_evo.troubleshooting.one.paragraph_2") %></li>
+  <li><%= I18n.t("framework.verifone_evo.troubleshooting.one.paragraph_3") %></li>
+  <li><%= I18n.t("framework.verifone_evo.troubleshooting.one.paragraph_4") %></li>
+</ol>
+
+<h3><%= I18n.t("framework.verifone_evo.troubleshooting.two.title") %></h3>
+<ol>
+  <li><%= I18n.t("framework.verifone_evo.troubleshooting.two.paragraph_1") %></li>
+  <li><%= I18n.t("framework.verifone_evo.troubleshooting.two.paragraph_2") %></li>
+  <li><%= I18n.t("framework.verifone_evo.troubleshooting.two.paragraph_3") %></li>
 </ol>
 
 <h2 id="first-launch"><%= I18n.t("framework.first_launch.title") %></h2>
