Improved descriptions of Verifone framework and EOS installation

--- a/templates/framework/verifone_evo.erb
+++ b/templates/framework/verifone_evo.erb
@@ -81,55 +81,57 @@ No *GO variable
 </pre>
 </div>
 
-<h2 id="preparing-the-pendrive"><%= I18n.t("framework.verifone_evo.table_of_contents.preparing_the_pendrive") %></h2>
-
-<p><%= I18n.t("framework.verifone_evo.preparing_the_pendrive.paragraph_1") %></p>
+<p><%= I18n.t("framework.verifone_evo.preparing_the_device_usb.paragraph_2") %></p>
 
 <ol>
-  <li><%= I18n.t("framework.verifone_evo.preparing_the_pendrive.paragraph_2") %></li>
-  <li><%= I18n.t("framework.verifone_evo.preparing_the_pendrive.paragraph_3") %></li>
-  <li><%= I18n.t("framework.verifone_evo.preparing_the_pendrive.paragraph_4") %></li>
-  <li><%= I18n.t("framework.verifone_evo.preparing_the_pendrive.paragraph_5") %></li>
-  <li><%= I18n.t("framework.verifone_evo.preparing_the_pendrive.paragraph_6") %></li>
+  <li><%= I18n.t("framework.verifone_evo.preparing_the_device_usb.paragraph_3") %></li>
+  <li><%= I18n.t("framework.verifone_evo.preparing_the_device_usb.paragraph_4") %></li>
+  <li><%= I18n.t("framework.verifone_evo.preparing_the_device_usb.paragraph_5") %></li>
+  <li><%= I18n.t("framework.verifone_evo.preparing_the_device_usb.paragraph_6") %></li>
+  <li><%= I18n.t("framework.verifone_evo.preparing_the_device_usb.paragraph_7") %></li>
+  <li><%= I18n.t("framework.verifone_evo.preparing_the_device_usb.paragraph_8") %></li>
+  <li><%= I18n.t("framework.verifone_evo.preparing_the_device_usb.paragraph_9") %></li>
+  <li><%= I18n.t("framework.verifone_evo.preparing_the_device_usb.paragraph_10") %></li>
+  <li><%= I18n.t("framework.verifone_evo.preparing_the_device_usb.paragraph_11") %></li>
+</ol>
+
+<h2 id="loading-the-eos-usb"><%= I18n.t("framework.verifone_evo.table_of_contents.loading_the_eos_usb") %></h2>
+
+<p><%= I18n.t("framework.verifone_evo.loading_the_eos_usb.paragraph_1") %></p>
+
+<ol>
+  <li><%= I18n.t("framework.verifone_evo.loading_the_eos_usb.paragraph_2") %></li>
+  <li><%= I18n.t("framework.verifone_evo.loading_the_eos_usb.paragraph_3") %></li>
+  <li><%= I18n.t("framework.verifone_evo.loading_the_eos_usb.paragraph_4") %></li>
+  <li><%= I18n.t("framework.verifone_evo.loading_the_eos_usb.paragraph_5") %></li>
+  <li><%= I18n.t("framework.verifone_evo.loading_the_eos_usb.paragraph_6") %></li>
+  <li><%= I18n.t("framework.verifone_evo.loading_the_eos_usb.paragraph_7") %></li>
+  <li><%= I18n.t("framework.verifone_evo.loading_the_eos_usb.paragraph_8") %></li>
+  <li><%= I18n.t("framework.verifone_evo.loading_the_eos_usb.paragraph_9") %></li>
 </ol>
 
 <h2 id="loading-the-framework"><%= I18n.t("framework.verifone_evo.table_of_contents.loading_the_framework") %></h2>
 
 <p><%= I18n.t("framework.verifone_evo.loading_the_framework_usb.paragraph_1") %></p>
 
-<img src="/img/verifone-evo/verifone-vx520-pendrive.jpg" class="img-tutorial img-polaroid" alt="Verifone EVO USB" />
+<ol>
+  <li><%= I18n.t("framework.verifone_evo.loading_the_framework_usb.paragraph_2") %></li>
+  <li><%= I18n.t("framework.verifone_evo.loading_the_framework_usb.paragraph_3") %></li>
+  <li><%= I18n.t("framework.verifone_evo.loading_the_framework_usb.paragraph_4") %></li>
+  <li><%= I18n.t("framework.verifone_evo.loading_the_framework_usb.paragraph_5") %></li>
+  <li><%= I18n.t("framework.verifone_evo.loading_the_framework_usb.paragraph_6") %></li>
+  <li><%= I18n.t("framework.verifone_evo.loading_the_framework_usb.paragraph_7") %></li>
 
-<p><%= I18n.t("framework.verifone_evo.loading_the_framework_usb.paragraph_2") %></p>
+  <img src="/img/verifone-evo/verifone-vx520-pendrive.jpg" class="img-tutorial img-polaroid" alt="Verifone EVO USB" />
 
-<img src="/img/verifone-evo/verifone-evo-vx680.jpg" class="img-tutorial img-polaroid" alt="Verifone EVO USB" />
+  <li><%= I18n.t("framework.verifone_evo.loading_the_framework_usb.paragraph_8") %></li>
 
-<p><%= I18n.t("framework.verifone_evo.loading_the_framework_usb.paragraph_3") %></p>
+  <img src="/img/verifone-evo/verifone-evo-vx680.jpg" class="img-tutorial img-polaroid" alt="Verifone EVO USB" />
 
-<div class="pos">
-<pre>
-VTM DOWNLOAD MGR G!
-
-DOWNLOAD ALL FILES
-From USB Flash Memory
-1) Yes
-2) No
-</pre>
-</div>
-
-<p><%= I18n.t("framework.verifone_evo.loading_the_framework_usb.paragraph_4") %></p>
-
-<div class="pos">
-<pre>
-VTM DOWNLOAD MGR G!
-
-USB Download Complete
-Remove USB Flash Mem
-</pre>
-</div>
-
-<p><%= I18n.t("framework.verifone_evo.loading_the_framework_usb.paragraph_5") %></p>
-
-<p><%= I18n.t("framework.verifone_evo.loading_the_framework_usb.paragraph_6") %></p>
+  <li><%= I18n.t("framework.verifone_evo.loading_the_framework_usb.paragraph_9") %></li>
+  <li><%= I18n.t("framework.verifone_evo.loading_the_framework_usb.paragraph_10") %></li>
+  <li><%= I18n.t("framework.verifone_evo.loading_the_framework_usb.paragraph_11") %></li>
+</ol>
 
 <h2 id="troubleshooting"><%= I18n.t("troubleshooting") %></h2>
 
