Add table of contents for Verifone EOS installation

--- a/templates/framework/verifone_evo.erb
+++ b/templates/framework/verifone_evo.erb
@@ -8,6 +8,7 @@
   <li><a href="#pre-requisites"><%= I18n.t("framework.verifone_evo.table_of_contents.prerequisites") %></a></li>
   <li><a href="#identify-os"><%= I18n.t("framework.verifone_evo.table_of_contents.identify_os") %></a></li>
   <li><a href="#preparing-the-pos"><%= I18n.t("framework.verifone_evo.table_of_contents.preparing_the_device") %></a></li>
+  <li><a href="#loading-the-eos-usb"><%= I18n.t("framework.verifone_evo.table_of_contents.loading_the_eos_usb") %></a></li>
   <li><a href="#loading-the-framework"><%= I18n.t("framework.verifone_evo.table_of_contents.loading_the_framework") %></a></li>
   <li><a href="#troubleshooting"><%= I18n.t("troubleshooting") %></a></li>
   <li><a href="#first-launch"><%= I18n.t("framework.first_launch.title") %></a></li>
