--- a/templates/api/v1/groups.erb
+++ b/templates/api/v1/groups.erb
@@ -5,7 +5,6 @@
 <h1><%= I18n.t("api.v1.groups.title") %></h1>
 
 <ol class="table-of-contents">
-  <li><a href="#types"><%= I18n.t("api.v1.groups.table_of_contents.types") %></a></li>
   <li><a href="#attributes"><%= I18n.t("api.v1.groups.table_of_contents.attributes") %></a></li>
   <li><a href="#index"><%= I18n.t("api.v1.groups.table_of_contents.index") %></a></li>
   <li><a href="#show"><%= I18n.t("api.v1.groups.table_of_contents.show") %></a></li>
@@ -13,10 +12,6 @@
   <li><a href="#update"><%= I18n.t("api.v1.groups.table_of_contents.update") %></a></li>
   <li><a href="#destroy"><%= I18n.t("api.v1.groups.table_of_contents.destroy") %></a></li>
 </ol>
-
-<h2 id="types"><%= I18n.t("api.v1.groups.table_of_contents.types") %></h2>
-
-<p><%= I18n.t("api.v1.groups.types.paragraph_1") %></p>
 
 <h2 id="attributes"><%= I18n.t("api.v1.groups.table_of_contents.attributes") %></h2>
 
@@ -70,7 +65,7 @@
 
 <h3><%= I18n.t("api.method") %></h3>
 
-<pre><code>GET https://api.cloudwalk.io/<%= I18n.t("api.version") %>/groups/<%= I18n.t("api.object_type") %>?access_token={token}</code></pre>
+<pre><code>GET https://api.cloudwalk.io/<%= I18n.t("api.version") %>/groups?access_token={token}</code></pre>
 
 <h3><%= I18n.t("api.sample") %></h3>
 
@@ -81,7 +76,7 @@
 
 <div class="tab-content">
 <div class="tab-pane active" id="index-tab1">
-<pre><code>$ curl -X GET "https://api.cloudwalk.io/v1/groups/posxml?access_token=$TOKEN"</code></pre>
+<pre><code>$ curl -X GET "https://api.cloudwalk.io/v1/groups?access_token=$TOKEN"</code></pre>
 </div>
 
 <div class="tab-pane" id="index-tab2">
@@ -89,7 +84,7 @@
 
 token = 'API_TOKEN'
 
-uri = URI("https://api.cloudwalk.io/v1/groups/posxml?access_token=#{token}")
+uri = URI("https://api.cloudwalk.io/v1/groups?access_token=#{token}")
 
 http = Net::HTTP.new(uri.host, uri.port)
 http.use_ssl = true
@@ -112,9 +107,9 @@ puts "Response #{res.code} #{res.message}: #{res.body}"
       "entries":2,
       "total_entries":2
    },
-   "posxml_groups":[
+   "groups":[
       {
-         "posxml_group":{
+         "group":{
             "id":1,
             "name":"Retail",
             "updated_at":"2015-01-29T20:19:32Z",
@@ -124,7 +119,7 @@ puts "Response #{res.code} #{res.message}: #{res.body}"
          }
       },
       {
-         "posxml_group":{
+         "group":{
             "id":2,
             "name":"Staging",
             "updated_at":"2015-01-29T20:19:44Z",
@@ -143,7 +138,7 @@ puts "Response #{res.code} #{res.message}: #{res.body}"
 
 <h3><%= I18n.t("api.method") %></h3>
 
-<pre><code>GET https://api.cloudwalk.io/<%= I18n.t("api.version") %>/groups/<%= I18n.t("api.object_type") %>/{<%= I18n.t("api.v1.groups.name") %>}?access_token={token}</code></pre>
+<pre><code>GET https://api.cloudwalk.io/<%= I18n.t("api.version") %>/groups/{<%= I18n.t("api.v1.groups.name") %>}?access_token={token}</code></pre>
 
 <h3><%= I18n.t("api.sample") %></h3>
 
@@ -154,7 +149,7 @@ puts "Response #{res.code} #{res.message}: #{res.body}"
 
 <div class="tab-content">
 <div class="tab-pane active" id="show-tab1">
-<pre><code>$ curl -X GET "https://api.cloudwalk.io/v1/groups/posxml/Staging?access_token=$TOKEN"</code></pre>
+<pre><code>$ curl -X GET "https://api.cloudwalk.io/v1/groups/Staging?access_token=$TOKEN"</code></pre>
 </div>
 
 <div class="tab-pane" id="show-tab2">
@@ -162,7 +157,7 @@ puts "Response #{res.code} #{res.message}: #{res.body}"
 
 token = 'API_TOKEN'
 
-uri = URI("https://api.cloudwalk.io/v1/groups/posxml/Staging?access_token=#{token}")
+uri = URI("https://api.cloudwalk.io/v1/groups/Staging?access_token=#{token}")
 
 http = Net::HTTP.new(uri.host, uri.port)
 http.use_ssl = true
@@ -179,7 +174,7 @@ puts "Response #{res.code} #{res.message}: #{res.body}"
 <h3><%= I18n.t("api.response") %></h3>
 
 <pre><code data-language="javascript">{
-  "posxml_group":{
+  "group":{
     "id":2,
     "name":"Staging",
     "updated_at":"2015-01-29T20:19:44Z",
@@ -196,7 +191,7 @@ puts "Response #{res.code} #{res.message}: #{res.body}"
 
 <h3><%= I18n.t("api.method") %></h3>
 
-<pre><code>POST https://api.cloudwalk.io/<%= I18n.t("api.version") %>/groups/<%= I18n.t("api.object_type") %>?access_token={token}</code></pre>
+<pre><code>POST https://api.cloudwalk.io/<%= I18n.t("api.version") %>/groups?access_token={token}</code></pre>
 
 <h3><%= I18n.t("api.sample") %></h3>
 
@@ -207,7 +202,7 @@ puts "Response #{res.code} #{res.message}: #{res.body}"
 
 <div class="tab-content">
 <div class="tab-pane active" id="create-tab1">
-<pre><code>$ curl -X POST "https://api.cloudwalk.io/v1/groups/posxml?access_token=$TOKEN" \
+<pre><code>$ curl -X POST "https://api.cloudwalk.io/v1/groups?access_token=$TOKEN" \
 -d '{"name":"Dev"}'
 </code></pre>
 </div>
@@ -220,7 +215,7 @@ token = 'API_TOKEN'
 
 payload = { "name" => "Dev" }
 
-uri = URI("https://api.cloudwalk.io/v1/groups/posxml?access_token=#{token}")
+uri = URI("https://api.cloudwalk.io/v1/groups?access_token=#{token}")
 
 http = Net::HTTP.new(uri.host, uri.port)
 http.use_ssl = true
@@ -238,7 +233,7 @@ puts "Response #{res.code} #{res.message}: #{res.body}"
 <h3><%= I18n.t("api.response") %></h3>
 
 <pre><code data-language="javascript">{
-  "posxml_group":{
+  "group":{
     "id":3,
     "name":"Dev",
     "updated_at":"2015-01-29T20:23:08Z",
@@ -255,7 +250,7 @@ puts "Response #{res.code} #{res.message}: #{res.body}"
 
 <h3><%= I18n.t("api.method") %></h3>
 
-<pre><code>PUT https://api.cloudwalk.io/<%= I18n.t("api.version") %>/groups/<%= I18n.t("api.object_type") %>/{<%= I18n.t("api.v1.groups.name") %>}?access_token={token}</code></pre>
+<pre><code>PUT https://api.cloudwalk.io/<%= I18n.t("api.version") %>/groups/{<%= I18n.t("api.v1.groups.name") %>}?access_token={token}</code></pre>
 
 <h3><%= I18n.t("api.sample") %></h3>
 
@@ -266,7 +261,7 @@ puts "Response #{res.code} #{res.message}: #{res.body}"
 
 <div class="tab-content">
 <div class="tab-pane active" id="update-tab1">
-<pre><code>$ curl -X PUT "https://api.cloudwalk.io/v1/groups/posxml/Dev?access_token=$TOKEN" \
+<pre><code>$ curl -X PUT "https://api.cloudwalk.io/v1/groups/Dev?access_token=$TOKEN" \
 -d '{"name":"Development"}'
 </code></pre>
 </div>
@@ -279,7 +274,7 @@ token = 'API_TOKEN'
 
 payload = { "name" => "Development" }
 
-uri = URI("https://api.cloudwalk.io/v1/groups/posxml/Dev?access_token=#{token}")
+uri = URI("https://api.cloudwalk.io/v1/groups/Dev?access_token=#{token}")
 
 http = Net::HTTP.new(uri.host, uri.port)
 http.use_ssl = true
@@ -297,7 +292,7 @@ puts "Response #{res.code} #{res.message}: #{res.body}"
 <h3><%= I18n.t("api.response") %></h3>
 
 <pre><code data-language="javascript">{
-  "posxml_group":{
+  "group":{
     "id":3,
     "name":"Development",
     "updated_at":"2015-01-29T20:25:14Z",
@@ -314,7 +309,7 @@ puts "Response #{res.code} #{res.message}: #{res.body}"
 
 <h3><%= I18n.t("api.method") %></h3>
 
-<pre><code>DELETE https://api.cloudwalk.io/<%= I18n.t("api.version") %>/groups/<%= I18n.t("api.object_type") %>/{<%= I18n.t("api.v1.groups.name") %>}?access_token={token}</code></pre>
+<pre><code>DELETE https://api.cloudwalk.io/<%= I18n.t("api.version") %>/groups/{<%= I18n.t("api.v1.groups.name") %>}?access_token={token}</code></pre>
 
 <h3><%= I18n.t("api.sample") %></h3>
 
@@ -325,7 +320,7 @@ puts "Response #{res.code} #{res.message}: #{res.body}"
 
 <div class="tab-content">
 <div class="tab-pane active" id="destroy-tab1">
-<pre><code>$ curl -X DELETE "https://api.cloudwalk.io/v1/groups/posxml/Development?access_token=$TOKEN"</code></pre>
+<pre><code>$ curl -X DELETE "https://api.cloudwalk.io/v1/groups/Development?access_token=$TOKEN"</code></pre>
 </div>
 
 <div class="tab-pane" id="destroy-tab2">
@@ -333,7 +328,7 @@ puts "Response #{res.code} #{res.message}: #{res.body}"
 
 token = 'API_TOKEN'
 
-uri = URI("https://api.cloudwalk.io/v1/groups/posxml/Development?access_token=#{token}")
+uri = URI("https://api.cloudwalk.io/v1/groups/Development?access_token=#{token}")
 
 http = Net::HTTP.new(uri.host, uri.port)
 http.use_ssl = true
