Add missing information on /devices endpoint

--- a/templates/api/v1/devices.erb
+++ b/templates/api/v1/devices.erb
@@ -42,6 +42,16 @@
       <td><%= I18n.t("api.v1.devices.attributes.list.enabled") %></td>
     </tr>
     <tr>
+      <td>logical_number_id</td>
+      <td>Integer</td>
+      <td><%= I18n.t("api.v1.devices.attributes.list.logical_number_id") %></td>
+    </tr>
+    <tr>
+      <td>meta</td>
+      <td>JSON</td>
+      <td><%= I18n.t("api.v1.devices.attributes.list.meta") %></td>
+    </tr>
+    <tr>
       <td>updated_at</td>
       <td>String</td>
       <td><%= I18n.t("api.v1.devices.attributes.list.updated_at") %></td>
