--- a/templates/posxml/commands.erb
+++ b/templates/posxml/commands.erb
@@ -130,6 +130,13 @@
       <p><%= I18n.t("posxml.commands.system_gettouchscreen.description") %></p>
     </div>
   </div>
+
+  <div class="row-fluid">
+      <div class="span4 command-short">
+        <a href="commands/system.gettouchscreenkeyboard">system.gettouchscreenkeyboard</a>
+        <p><%= I18n.t("posxml.commands.system_gettouchscreenkeyboard.description") %></p>
+      </div>
+  </div>
 </div>
 
 <div id="print-commands" class="posxml-commands">
