add Gerter driver description en/pt-br

--- a/templates/framework/gertec.erb
+++ b/templates/framework/gertec.erb
@@ -18,6 +18,7 @@
 <ol>
   <li><%= I18n.t("framework.gertec.prerequisites.operating_system") %></li>
   <li><%= I18n.t("framework.gertec.prerequisites.cable") %></li>
+  <li><%= I18n.t("framework.gertec.prerequisites.driver") %></li>
   <li><%= I18n.t("framework.gertec.prerequisites.software")%></li>
   <li><%= I18n.t("framework.package.select") %></li>
 </ol>
@@ -44,6 +45,18 @@
 
   <li><%= I18n.t("framework.gertec.preparing_the_device.paragraph_3") %></li>
   <li><%= I18n.t("framework.gertec.preparing_the_device.paragraph_4") %></li>
+
+<div class="pos">
+<pre>
+      Updating
+
+Waiting file...
+
+
+
+</pre>
+</div>
+
 </ol>
 
 <h2 id="loading-the-framework"><%= I18n.t("framework.gertec.table_of_contents.loading_the_framework") %></h2>
@@ -53,6 +66,7 @@
   <li><%= I18n.t("framework.gertec.loading_the_framework.paragraph_2") %></li>
   <li><%= I18n.t("framework.gertec.loading_the_framework.paragraph_3") %></li>
   <li><%= I18n.t("framework.gertec.loading_the_framework.paragraph_4") %></li>
+  <li><%= I18n.t("framework.gertec.loading_the_framework.paragraph_5") %></li>
 </ol>
 
 <h2 id="first-launch"><%= I18n.t("framework.first_launch.title") %></h2>
